--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "vite_react_shadcn_ts",
   "private": true,
   "homepage": "https://Nafich-Shikdar.github.io/dacinci",
+
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-"predeploy": "npm run build",
+  "scripts": {"predeploy": "npm run build",
 "deploy": "gh-pages -d build",
+
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
