--- a/package.json
+++ b/package.json
@@ -2,17 +2,15 @@
   "name": "vite_react_shadcn_ts",
   "private": true,
   "homepage": "https://Nafich-Shikdar.github.io/dacinci",
-
   "version": "0.0.0",
   "type": "module",
-  "scripts": {"predeploy": "npm run build",
-"deploy": "gh-pages -d build",
-
+  "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:dev": "vite build --mode development",
+    "preview": "vite preview",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -83,6 +81,7 @@
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "gh-pages": "^5.0.0"
   }
 }
